불편사항 완료 / 이다영 / 02-05 22:31
[주요 내용]

- 어린이집 / 유치원 불편사항 완료 (목록, 쓰기, 보기, 수정, 삭제)
	claim-main.css / claim-main.html / claim-mapper.xml /
	claim-update.html / claim-view.css / claim-view.html /
	claim-write.html / Claim.java / ClaimController.java /
	ClaimMapper.java / ClaimService.java

- 어린이집 / 유치원 로그인하지 않았을 경우 기능 차단
	kinder-detail.css / kinder-detail.html /
	nursery-detail.css / nursery-detail.html

- 어린이집 / 유치원 불편사항 건수 가져오기
	kinder-mapper.xml / KinderController.java /
	KinderMapper.java / KinderService.java /
	nursery-mapper.xml / NurseryController.java /
	NurseryMapper.java / NurseryService.java

- 어린이집 / 유치원 목록 이미지 랜던으로 변경, select 값 유지
	kinder-main.html / nursery-main.html

- & 그대로 인식하도록 수정
	msg.html

- 어린이집 / 유치원 이미지 파일명 변경
	kinder0.JPG / kinder30.JPG / nursery0.JPG / nursery31.JPG

--- a/src/main/resources/static/css/claim-main.css
+++ b/src/main/resources/static/css/claim-main.css
@@ -54,13 +54,14 @@
     border-bottom: #FF87A4 solid 2px;
 }
 
-#claim-table>tbody>tr {
-    cursor:pointer;
+.claim {
+    cursor: pointer;
 }
 
-#claim-table>tbody>tr:hover {
+.claim:hover {
     background-color: #F3F5F9;
 }
+
 
 #claim-table th,
 #claim-table td {
