--- a/src/main/resources/templates/common/msg.html
+++ b/src/main/resources/templates/common/msg.html
@@ -9,7 +9,7 @@
 		// 알림메세지를 띄움
 		alert("[[${msg}]]");
 		// 페이지 이동
-		location.replace("[[${location}]]");
+		location.replace("[(${location})]");
 	</script>
 </body>
 </html>
