--- a/src/main/resources/templates/kinder-main.html
+++ b/src/main/resources/templates/kinder-main.html
@@ -33,6 +33,7 @@
 
     <!--jquery-->
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script th:src="@{/js/address.js}"></script>
     <style>
       @font-face {
       font-family: 'NanumSquareRound';
@@ -133,27 +134,27 @@
                   <div class="widget widget-filter pb-4" id="district">
                     <h3 class="widget-title1"><b>지역</b></h3>
                     <div class="form-inline">
-                      <select class="form-select" name="city" id="city" onchange="cityChange()" style="border-radius: 10px; width: 120px; display: inline;">
-                        <option value=" " th:selected="${param.city} == ' '">전체</option>
-                        <option value="서울" th:selected="${param.city} == '서울'">서울</option>
-                        <option value="부산" th:selected="${param.city} == '부산'">부산</option>
-                        <option value="대구" th:selected="${param.city} == '대구'">대구</option>
-                        <option value="인천" th:selected="${param.city} == '인천'">인천</option>
-                        <option value="광주" th:selected="${param.city} == '광주'">광주</option>
-                        <option value="대전" th:selected="${param.city} == '대전'">대전</option>
-                        <option value="울산" th:selected="${param.city} == '울산'">울산</option>
-                        <option value="세종특별" th:selected="${param.city} == '세종특별'">세종</option>
-                        <option value="경기도" th:selected="${param.city} == '경기도'">경기도</option>
-                        <option value="강원도" th:selected="${param.city} == '강원도'">강원도</option>
-                        <option value="충청북도" th:selected="${param.city} == '충청북도'">충청북도</option>
-                        <option value="충청남도" th:selected="${param.city} == '충청남도'">충청남도</option>
-                        <option value="전라북도" th:selected="${param.city} == '전라북도'">전라북도</option>
-                        <option value="전라남도" th:selected="${param.city} == '전라남도'">전라남도</option>
-                        <option value="경상북도" th:selected="${param.city} == '경상북도'">경상북도</option>
-                        <option value="경상남도" th:selected="${param.city} == '경상남도'">경상남도</option>
-                        <option value="제주" th:selected="${param.city} == '제주'">제주도</option>
+                      <select class="form-select" name="city" id="city" onchange="cityChange()" style="border-radius: 10px; width: 240px; display: inline;">
+                        <option value=" " th:selected="${#strings.equals(param.city, ' ')}">전체</option>
+                        <option value="서울" th:selected="${#strings.equals(param.city, '서울')}">서울특별시</option>
+                        <option value="부산" th:selected="${#strings.equals(param.city, '부산')}">부산광역시</option>
+                        <option value="대구" th:selected="${#strings.equals(param.city, '대구')}">대구광역시</option>
+                        <option value="인천" th:selected="${#strings.equals(param.city, '인천')}">인천광역시</option>
+                        <option value="광주" th:selected="${#strings.equals(param.city, '광주')}">광주광역시</option>
+                        <option value="대전" th:selected="${#strings.equals(param.city, '대전')}">대전광역시</option>
+                        <option value="울산" th:selected="${#strings.equals(param.city, '울산')}">울산광역시</option>
+                        <option value="세종특별" th:selected="${#strings.equals(param.city, '세종특별')}">세종특별자치시</option>
+                        <option value="경기도" th:selected="${#strings.equals(param.city, '경기도')}">경기도</option>
+                        <option value="강원도" th:selected="${#strings.equals(param.city, '강원도')}">강원도</option>
+                        <option value="충청북도" th:selected="${#strings.equals(param.city, '충청북도')}">충청북도</option>
+                        <option value="충청남도" th:selected="${#strings.equals(param.city, '충청남도')}">충청남도</option>
+                        <option value="전라북도" th:selected="${#strings.equals(param.city, '전라북도')}">전라북도</option>
+                        <option value="전라남도" th:selected="${#strings.equals(param.city, '전라남도')}">전라남도</option>
+                        <option value="경상북도" th:selected="${#strings.equals(param.city, '경상북도')}">경상북도</option>
+                        <option value="경상남도" th:selected="${#strings.equals(param.city, '경상남도')}">경상남도</option>
+                        <option value="제주" th:selected="${#strings.equals(param.city, '제주')}">제주특별자치도</option>
                       </select>&nbsp;
-                      <select class="form-select" name="town" id="town" style="border-radius: 10px; width: 110px; display: inline;">
+                      <select class="form-select mt-2" name="town" id="town" style="border-radius: 10px; width: 240px; display: inline;">
                         <option value=" ">전체</option>
                       </select>&nbsp;
                     </div>
@@ -436,7 +437,7 @@
           <section class="col-lg-8 pt-3" style="margin-left: 90px;">
             <!-- Products grid-->
             <div class="headtext">
-              <b class="bold">검색 목록 [[${count}]]건</b>
+              <b class="bold">검색 목록 <span th:text="${#numbers.formatInteger(count, 3, 'COMMA')}"></span>건</b>
               <a href="/compare-kinder" class="compare">
                 <div class="compareIcon"><img src="img/back(1).svg"></div>&nbsp;&nbsp;<b>선택목록 비교하기</b>
               </a>
@@ -448,10 +449,10 @@
 	            </th:block>
 	            
 	            <th:block th:if="${list != null}">
-	            	<th:block th:each="kinder : ${list}">
+	            	<th:block th:each="kinder, status : ${list}">
 		              <div class="box777">
 		                  <div class="photo777">
-	                  		<img class="photo" src="img/유치원/kinder1.JPG">
+	                  		<img class="photo" th:src="|img/유치원/kinder${img[status.index]}.JPG|">
 		                    <button class="button7" th:id="'compare' + ${kinder.kinNo}" value="false" th:onclick="|onClickCompare('compare${kinder.kinNo}')|">
 		                      <i class="ci-bookmark fw-bold"></i>
 		                      <b>&nbsp;비교&nbsp;</b>
@@ -464,7 +465,7 @@
 		                    <a class="sarip fw-bold">&nbsp;&nbsp;[[${kinder.establish}]]&nbsp;&nbsp;</a>
 		                    <div class="container888">
 		                      <h3 class="product-title fs-lg" style="margin-top: 10px;" >
-		                        <a th:href="|/kinder-detail?no=${kinder.kinNo}|"><b>[[${kinder.kindername}]]</b></a>
+		                        <a th:href="|/kinder-detail?no=${kinder.kinNo}&i=${img[status.index]}|"><b>[[${kinder.kindername}]]</b></a>
 		                      </h3>
 		                    </div>
 		                    <div class="location"><i class="ci-location text-accent fw-bold"></i>&nbsp;[[${kinder.addr}]]</div>
@@ -522,7 +523,7 @@
     <script th:src="@{/vendor/flatpickr/dist/plugins/rangePlugin.js}"></script>
     <!-- Main theme script-->
     <script th:src="@{/js/theme.min.js}"></script>
-    <script th:src="@{/js/address.js}"></script>
+    
     <script th:src="@{/js/button-compare.js}"></script>
     <script th:src="@{/js/button-heart.js}"></script>
     
@@ -534,6 +535,7 @@
 			const urlParams = new URL(location.href).searchParams;
 			var city = urlParams.get('city');
 			if(city != '') {
+				console.log(city);
 				cityChange();
 			}
 		})
